--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"express": "^4.19.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.25.1",
 		"react-scripts": "5.0.1",
 		"sqlite": "^5.1.1",
 		"sqlite3": "^5.1.7",
@@ -54,6 +55,7 @@
 		"@types/sqlite3": "^3.1.11",
 		"concurrently": "^8.2.2",
 		"html-webpack-plugin": "^5.6.0",
+		"prettier": "^3.3.3",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4",
