--- a/package.json
+++ b/package.json
@@ -50,12 +50,19 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.24.9",
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"@babel/preset-env": "^7.24.8",
+		"@babel/preset-react": "^7.24.7",
+		"@babel/preset-typescript": "^7.24.7",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
 		"@types/node": "^20.14.12",
 		"@types/sqlite3": "^3.1.11",
+		"babel-loader": "^9.1.3",
 		"concurrently": "^8.2.2",
 		"html-webpack-plugin": "^5.6.0",
 		"prettier": "^3.3.3",
+		"react-refresh": "^0.14.2",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4",
