PROJ-1: modify productController

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,6 +23,11 @@
 			"Utils/*": ["utils/*"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.tsx"],
+	"include": [
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"../backend/database.ts",
+		"../backend/dist/server.ts"
+	],
 	"exclude": ["node_modules"]
 }
