--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,11 @@
 		"rootDir": "./src",
 		"strict": true,
 		"esModuleInterop": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"baseUrl": "./src",
+		"paths": {
+			"Utils/*": ["utils/*"]
+		}
 	},
 	"include": ["src/**/*.ts", "gateways/productGateway.ts", "controllers/productController.ts", "models/productModel.ts"],
 	"exclude": ["node_modules"]
