PROJ-1: modify inventory table

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,7 +21,7 @@
 		"paths": {
 			"Components/*": ["components/*"],
 			"Utils/*": ["utils/*"],
-			"Backend/*": ["../../backend/*"]
+			"Api/*": ["api/*"]
 		}
 	},
 	"include": [
