PROJ-1: fix api

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,13 +26,5 @@
 		"types": ["vite/client"]
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"],
-	"exclude": ["node_modules"],
-	// "references": [
-	// 	{
-	// 		"path": "./tsconfig.app.json"
-	// 	},
-	// 	{
-	// 		"path": "./tsconfig.node.json"
-	// 	}
-	// ]
+	"exclude": ["node_modules"]
 }
