--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,27 @@
 {
 	"name": "backend",
 	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
 		"start": "ts-node -r tsconfig-paths/register src/server.ts",
-		"build": "tsc",
-		"dev": "ts-node-dev -r tsconfig-paths/register src/server.ts"
+		"dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+		"build": "tsc"
 	},
 	"dependencies": {
 		"chalk": "^5.3.0",
 		"cors": "^2.8.5",
-		"express": "^4.17.1",
+		"express": "^4.19.2",
 		"morgan": "^1.10.0",
-		"reflect-metadata": "^0.2.2",
 		"sqlite": "^5.1.1",
-		"sqlite3": "^5.0.2",
+		"sqlite3": "^5.1.7",
 		"winston": "^3.13.1"
 	},
 	"devDependencies": {
+		"@types/chalk": "^0.4.31",
 		"@types/cors": "^2.8.17",
-		"@types/express": "^4.17.11",
+		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
-		"@types/node": "^22.0.0",
+		"@types/typescript": "^0.4.29",
 		"@types/winston": "^2.4.4"
-	},
-	"type": "module"
+	}
 }
