PROJ-1: use tsx

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,8 +19,5 @@
 		}
 	},
 	"include": ["src/**/*.ts"],
-	"exclude": ["node_modules"],
-	"ts-node": {
-		"esm": true
-	}
+	"exclude": ["node_modules"]
 }
