--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "backend",
 	"version": "1.0.0",
-	"type": "module",
 	"scripts": {
-		"start": "ts-node -r tsconfig-paths/register src/server.ts",
-		"dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+		"start": "tsx dist/server.js",
+		"dev": "tsx watch src/server.ts",
 		"build": "tsc"
 	},
 	"dependencies": {
@@ -21,7 +20,6 @@
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
-		"@types/typescript": "^0.4.29",
 		"@types/winston": "^2.4.4"
 	}
 }
